[package]
name = "underrail-fix"
version = "1.0.0"
authors = ["styg2"]
edition = "2018"
links = "detours"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "underrail-fixer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1"

[dependencies]
bincode = "1"
once_cell = "1"
parking_lot = "0.11"
paste = "0.1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde = { version = "1", features = ["derive"] }
winapi = { version = "0.3", features = ["std", "minwindef", "synchapi", "wincon", "winnt", "winuser"] }
